--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: rgabriel
 Type: Package
 Title: Gabriel Multiple Comparison Test and Plot the Confidence Interval on Barplot
-Version: 0.5
+Version: 0.6
 Date: 2013-12-23
-Author: Miao YU
-Maintainer: Miao YU <yufreecas@gmail.com>
+Author: Yihui XIE, Miao YU
+Maintainer: Yihui XIE<xie@yihui.name> Miao YU <yufreecas@gmail.com> , 
 Description: This package was created to analyze multi-level one-way
         experimental designs. It is designed to handle vectorized
         observation and factor data where there are unequal sample
