--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Gabriel Multiple Comparison Test and Plot the Confidence Interval on Barp
 Version: 0.6
 Date: 2013-12-23
 Author: Yihui XIE, Miao YU
-Maintainer: Yihui XIE<xie@yihui.name> Miao YU <yufreecas@gmail.com> , 
+Maintainer: Yihui XIE<xie@yihui.name>, Miao YU <yufreecas@gmail.com>
 Description: This package was created to analyze multi-level one-way
         experimental designs. It is designed to handle vectorized
         observation and factor data where there are unequal sample
