--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,16 @@
 Package: rgabriel
 Type: Package
 Title: Gabriel Multiple Comparison Test and Plot the Confidence Interval on Barplot
-Version: 0.7
-Date: 2013-12-28
-Author: Yihui XIE, Miao YU
-Maintainer: Miao YU <yufreecas@gmail.com>
+Version: 0.9
+Date: 2022-05-09
+Authors@R: c(person(given = "Miao", family = "YU",
+        role = c("aut", "cre"), 
+        email = "yufreecas@gmail.com",
+        comment = c(ORCID = "0000-0002-2804-6014")),
+        person(given = "Yihui", family = "XIE",
+        role = c("aut"),  
+        email = "xie@yihui.name", 
+        comment = c(ORCID = "0000-0003-0645-5666")))
 Description: This package was created to analyze multi-level one-way
         experimental designs. It is designed to handle vectorized
         observation and factor data where there are unequal sample
@@ -14,5 +20,8 @@ Description: This package was created to analyze multi-level one-way
         The function, rgabriel, conduct the test and save the output as
         a vector to input into the gabriel.plot function, which produces 
         a confidence interval plot for Multiple Comparison.
-URL: https://github.com/yufree/rgabriel
+URL: https://github.com/yufree/rgabriel,
+    http://yufree.github.io/rgabriel/
 License: GPL (>= 2)
+Encoding: UTF-8
+RoxygenNote: 7.1.2
