--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,10 @@ Authors@R: c(person(given = "Miao", family = "YU",
         role = c("aut"),  
         email = "xie@yihui.name", 
         comment = c(ORCID = "0000-0003-0645-5666")))
-Description: This package was created to analyze multi-level one-way
-        experimental designs. It is designed to handle vectorized
-        observation and factor data where there are unequal sample
+Description: Analyze multi-level one-way
+        experimental designs where there are unequal sample
         sizes and population variance homogeneity can not be assumed.
-        To conduct the Gabriel test, create two vectors: one for your 
+        To conduct the Gabriel test <doi:10.2307/2286265>, create two vectors: one for your 
         observations and one for the factor level of each observation. 
         The function, rgabriel, conduct the test and save the output as
         a vector to input into the gabriel.plot function, which produces 
